<resources>
    <string name="app_name" translatable="false">DroidFRPD</string>
    <string name="update_url" translatable="false">https://github.com/donmor/DroidFRPD/releases/latest</string>
    <string name="update_api" translatable="false">https://api.github.com/repos/donmor/DroidFRPD/releases/latest</string>
    <string name="update_url_f_droid" translatable="false">https://f-droid.org/packages/top.donmor.droidfrpd/</string>
    <string name="update_api_f_droid" translatable="false">https://f-droid.org/api/v1/packages/top.donmor.droidfrpd</string>

    <string name="menu_daemons">Daemons</string>
    <string name="menu_settings">Settings</string>

    <string name="pk_g_client" translatable="false">pk_g_client</string>
    <string name="pk_g_server" translatable="false">pk_g_server</string>
    <string name="pk_g_global" translatable="false">pk_g_global</string>
    <string name="pk_client_auto_restart" translatable="false">pk_client_auto_restart</string>
    <string name="pk_client_edit_config" translatable="false">pk_client_edit_config</string>
    <string name="pk_client_start_on_boot" translatable="false">pk_client_start_on_boot</string>
    <string name="pk_server_auto_restart" translatable="false">pk_server_auto_restart</string>
    <string name="pk_server_edit_config" translatable="false">pk_server_edit_config</string>
    <string name="pk_server_start_on_boot" translatable="false">pk_server_start_on_boot</string>
    <string name="pk_global_ignore_optimization" translatable="false">pk_global_ignore_optimization</string>
    <string name="pk_global_open_conf" translatable="false">pk_global_open_conf</string>
    <string name="pk_global_hide_activity" translatable="false">pk_global_hide_activity</string>
    <string name="pk_global_check_update" translatable="false">pk_global_check_update</string>
    <string name="pk_global_about" translatable="false">pk_global_about</string>

    <string name="preference_g_client">FRP Client</string>
    <string name="preference_g_server">FRP Server</string>
    <string name="preference_g_global">Global Settings</string>
    <string name="preference_auto_restart">Restart daemon automatically</string>
    <string name="preference_start_on_boot">Start on device boot</string>
    <string name="preference_client_edit_config">Edit FRP Client config</string>
    <string name="preference_server_edit_config">Edit FRP Server config</string>
    <string name="preference_global_ignore_optimization">Go to Battery Optimization setting</string>
    <string name="preference_global_open_conf">Open configuration directory</string>
    <string name="preference_global_hide_activity">Hide activity from Recent Apps</string>
    <string name="preference_global_check_update">Check for update</string>
    <string name="preference_global_update">New version: %s</string>
    <string name="preference_global_about">About DroidFRPD</string>

    <string name="ui_client_d">FRP Client Daemon</string>
    <string name="ui_server_d">FRP Server Daemon</string>
    <string name="ui_running">Daemon is running</string>
    <string name="ui_client_running">Client is running</string>
    <string name="ui_client_stopped">Client is stopped</string>
    <string name="ui_server_running">Server is running</string>
    <string name="ui_server_stopped">Server is stopped</string>
    <string name="ui_client_stopped_err">FRP Client daemon stopped unexpectedly</string>
    <string name="ui_server_stopped_err">FRP Server daemon stopped unexpectedly</string>
    <string name="ui_client_stopped_restart">FRP Client daemon stopped unexpectedly, restarting…</string>
    <string name="ui_server_stopped_restart">FRP Server daemon stopped unexpectedly, restarting…</string>
    <string name="ui_save">Save</string>
    <string name="ui_requires_boot_permission">Starting on boot requests corresponding permission. You may have to grant it for this app manually.</string>
    <string name="ui_already_latest">Already up to date</string>
    <string name="ui_about">About DroidFRPD</string>
    <string name="ui_about_desc">Android FRP daemon manager</string>
    <string name="ui_ver">%s</string>
    <string name="ui_ver_f_droid">%s  F-Droid Build</string>
    <string name="ui_eula">End-User Agreement</string>
    <string name="ui_eula_lic">This software is licensed under GPL-3.0:</string>
    <string name="ui_eula_permissions">The following permission is in use:</string>
    <string name="ui_eula_permissions_text">Show notifications\nHave full network access\nRun foreground service\nRun at startup</string>
    <string name="ui_accept">Accept</string>
    <string name="ui_decline">Decline</string>
    <string name="ui_close">Close</string>
    <string name="ui_revoke">You are about to revoke the End-User Agreement.</string>
</resources>