<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.daemons.DaemonsFragment">

    <ToggleButton
        android:id="@+id/toggleDaemonClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/ui_client_running"
        android:textOff="@string/ui_client_stopped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toggleDaemonServer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ToggleButton
        android:id="@+id/toggleDaemonServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/ui_server_running"
        android:textOff="@string/ui_server_stopped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toggleDaemonClient"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>